Убраны аннотации Lombok, так как они не работают с JDK 23 версии
